less/_components.lightbox.less
.slider{
	background: @grey;
	margin-bottom: @unidad;
	position: relative;
}

.slideshow, .sp-wrap{
	width: 100%;
	display: block !important;
	margin: 0 auto !important;
}

.slideshow{
	position: relative;
}

.slideshow img, .sp-wrap img{
	max-width: 100%; height: auto;
	padding: 0; margin: 0;
}

.sp-large{

}

.sp-full-screen{
	background: @dark !important;
	color: @light;
}


/**
 * CONTROLS
**/

.cycle-controls{
	width: 100%;
	font-size: 3em;
	color: @light;
	.center-full;
	z-index: @zIndex-10;
}

.cycle-prev, .cycle-next{
	cursor: pointer;
}

.cycle-prev{
	float: left;
}
.cycle-next{
	float: right;
}

.cycle-prev i, .cycle-next i{
	.text-shadow(0px 0px 6px rgba(0, 0, 0, 1));
}

/*------------------------------------*\
    #MEDIUM
\*------------------------------------*/
@media (min-width: @medium) {

	.slider{
		width: 66.66666664%; height: 100%;
		margin-bottom: 0;
		float: left;
	}

	.slideshow{
		.center-full;
	}

	.sp-wrap{
		.center-full !important;
	}
}

